[package]
name = "balter"
license = "MIT"
version = "0.3.2"
edition = "2021"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/balter"
repository = "https://github.com/byronwasti/balter"
description = "A load/stress testing framework."
readme = "README.md"
keywords = ["testing", "distributed", "load-testing"]
categories = ["development-tools", "concurrency"]
publish = true

[dependencies]
arc-swap = "1.6.0"
balter-macros = { version = "0.2", path = "../balter-macros" }
governor = "0.6.0"
humantime = "2.1.0"
pin-project = "1.1.2"
thiserror = "1.0.56"
tokio = { version = "1.29.1", features = ["rt", "time"] }
tracing = "0.1.37"

async-channel = { version = "2.1.1", optional = true }
axum = { version = "0.7.2", features = ["macros", "ws", "tokio"], optional = true }
bincode = { version = "1.3.3", optional = true }
cfg_eval = { version = "0.1.2", optional = true }
clap = { version = "4.4.11", features = ["derive"], optional = true }
futures-util = { version = "0.3.30", optional = true }
lazy_static = { version = "1.4.0", optional = true }
linkme = { version = "0.3", optional = true }
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_with = { version = "3.4.0", optional = true }
time = { version = "0.3.31", features = ["serde"], optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.0", features = ["trace"], optional = true }
url = { version = "2.5.0", optional = true }
axum-tungstenite = { version = "0.3.0", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
ntest = "0.9.0"
tracing-test = "0.2.4"

[features]
rt = ["dep:async-channel", "dep:axum", "dep:bincode", "dep:clap", "dep:lazy_static", "dep:linkme", "dep:reqwest", "dep:serde", "dep:serde_with", "dep:time", "dep:tokio-tungstenite", "dep:tower", "dep:tower-http", "dep:url", "dep:futures-util", "dep:cfg_eval", "dep:axum-tungstenite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
