[package]
name = "balter-core"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/balter"
repository = "https://github.com/byronwasti/balter"
description = "A load/stress testing framework."
keywords = ["testing", "distributed", "load-testing"]
categories = ["development-tools", "concurrency"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_with = { version = "3.4.0", optional = true}
cfg_eval = { version = "0.1.2", optional = true }

[features]
rt = ["dep:serde", "dep:serde_with", "dep:cfg_eval"]
