[package]
name = "balter-core"
license = "MIT"
version = "0.3.1"
edition = "2021"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/balter"
repository = "https://github.com/byronwasti/balter"
description = "A load/stress testing framework."
keywords = ["testing", "distributed", "load-testing"]
categories = ["development-tools", "concurrency"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg_eval = { version = "0.1.2", optional = true }
pdatastructs = "0.7.0"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_with = { version = "3.4.0", optional = true}

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
insta = { version = "1.38.0", features = ["json"] }

[features]
rt = ["dep:serde", "dep:serde_with", "dep:cfg_eval"]
