[package]
name = "balter-runtime"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/balter"
repository = "https://github.com/byronwasti/balter"
description = "A load/stress testing framework."
keywords = ["testing", "distributed", "load-testing"]
categories = ["development-tools", "concurrency"]
publish = true

[dependencies]
balter-core = { version = "0.2", features = ["rt"], path = "../balter-core" }

async-channel = "2.1.1"
axum = { version = "0.7.2", features = ["macros", "ws", "tokio"] }
bincode = "1.3.3"
cfg_eval = "0.1.2"
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.30"
lazy_static = "1.4.0"
linkme = "0.3"
rand = { version = "0.8.5" }
rand_distr = "0.4.3"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.29.1", features = ["rt", "time"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.37"
trait-variant = "0.1.2"
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
tracing-test = "0.2.4"
