[package]
name = "balter-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
balter = { path = "../balter-core" }
mock-service = { path = "../mock-service" }
reqwest = "0.11.24"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
linkme = "0.3.23"
serde = "1.0.197"
serde_json = "1.0.114"

[dev-dependencies]
ntest = "0.9.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"

[features]
integration = []
