[package]
name = "balter"
license = "MIT"
version = "0.8.1"
edition = "2021"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/balter"
repository = "https://github.com/byronwasti/balter"
description = "A load/stress testing framework."
readme = "README.md"
keywords = ["testing", "distributed", "load-testing"]
categories = ["development-tools", "concurrency"]
publish = true

[dependencies]
balter-macros = { version = "0.3.0", path = "../balter-macros" }
balter-core = { version = "0.5.1", path = "../balter-core" }
balter-runtime = { version = "0.3.1", path = "../balter-runtime", optional = true }

arc-swap = "1.6.0"
governor = "0.6.0"
humantime = "2.1.0"
metrics = { version = "0.23", optional = true }
metrics-util = "0.16.3"
pdatastructs = "0.7.0"
pin-project = "1.1.2"
statistical = "1.0"
thiserror = "1.0.56"
tokio = { version = "1.29.1", features = ["rt", "time"] }
tracing = "0.1.37"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
ntest = "0.9.0"
tracing-test = "0.2.4"
linkme = "0.3"

[features]
default = ["metrics"]
metrics = ["dep:metrics"]
rt = ["dep:balter-runtime", "balter-core/rt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
