[package]
name = "balter-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
balter = { path = "../balter" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.13.0"

[profile.release]
debug = true
