[package]
name = "mock-service"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
governor = "0.6.0"
lazy_static = "1.4.0"
anyhow = "1"
metrics = "0.22.1"
metrics-exporter-prometheus = "0.13.1"
