[package]
name = "mock-service"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
governor = "0.6.0"
lazy_static = "1.4.0"
anyhow = "1"
metrics = "0.22.1"
metrics-exporter-prometheus = "0.13.1"
tracing = "0.1.40"
serde = { version = "1.0.197", features = ["derive"] }
tower-http = { version="0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
