[package]
name = "rust-talk-feb-2024"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
balter = { path = "../balter-core" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
anyhow = "1.0.79"
