[package]
name = "balter-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
balter = { path = "../balter", features = ["rt"] }
mock-service = { path = "../mock-service" }
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
linkme = "0.3.23"
serde = "1.0.197"
serde_json = "1.0.114"
futures = "0.3.30"

[dev-dependencies]
metrics-exporter-prometheus = "0.13.0"
ntest = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

[features]
integration = []
