[package]
name = "basic-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
balter = { path = "../../balter-core" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
anyhow = "1.0.79"
linkme = { version = "0.3" }

[profile.release]
debug = true
